WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286043
AX: [Site Isolation] Accessibility isn't enabled in remote frames
https://bugs.webkit.org/show_bug.cgi?id=286043
Summary
AX: [Site Isolation] Accessibility isn't enabled in remote frames
Joshua Hoffman
Reported
2025-01-15 17:39:43 PST
The global gaccessibilityenabled flag isn't set in remote frames
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-15 17:39:53 PST
<
rdar://problem/143011666
>
Joshua Hoffman
Comment 2
2025-01-15 17:40:44 PST
rdar://142815175
Joshua Hoffman
Comment 3
2025-01-15 17:48:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39112
EWS
Comment 4
2025-01-16 17:26:53 PST
Committed
289033@main
(d85f11d70868): <
https://commits.webkit.org/289033@main
> Reviewed commits have been landed. Closing PR #39112 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug