AX: [Site Isolation] Accessibility isn't enabled in remote frames https://bugs.webkit.org/show_bug.cgi?id=286043 rdar://142815175

Reviewed by Tyler Wilcock.

When accessibility is enabled (gaccessibilityenabled = true) due to an attribute request
on the WKAccessibilityWebPageObject, any remote frame's web content processes will not
have their flag set to true.

This patch enables sending a notification to all web content processes of a WebPage
when accessibility is enabled, so all processes have this flag in sync.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::enableAccessibilityForAllProcesses):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/WebPageProxy.messages.in:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::enableAccessibilityForAllProcesses):
(WebKit::WebPage::enableAccessibility):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:
* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:
(-[WKAccessibilityWebPageObjectBase enableAccessibilityForAllProcesses]):
(-[WKAccessibilityWebPageObjectBase accessibilityRootObjectWrapper]):
* Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm:
(-[WKAccessibilityWebPageObject accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/289033@main