Source/WebKit/WebProcess/WebPage/mac/WKAccessibilityWebPageObjectMac.mm
@@ -163,9 +163,9 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     static std::atomic<unsigned> screenHeight { 0 };
     if (UNLIKELY(!didInitialize)) {
         didInitialize = true;
-        callOnMainRunLoopAndWait([] {
+        callOnMainRunLoopAndWait([protectedSelf = retainPtr(self)] {
             if (!WebCore::AXObjectCache::accessibilityEnabled())
-                WebCore::AXObjectCache::enableAccessibility();
+                [protectedSelf enableAccessibilityForAllProcesses];
 
 #if ENABLE(ACCESSIBILITY_ISOLATED_TREE)
             if (WebCore::AXObjectCache::isIsolatedTreeEnabled())
